<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="266dp"
    android:background="@color/secondarycolor">

    <TextView
        android:id="@+id/Create_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_task"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="12dp"
        android:textSize="16sp"/> <!-- Corrected attribute -->

    <EditText
        android:id="@+id/title_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Create_new_task"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:hint="@string/title"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_task"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-6dp"
        android:hint="@string/add_sub_task"
        android:textSize="12sp"
        android:background="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/date_time"
        android:background="@drawable/new_task_button"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/new_task_button"
        android:text="@string/date_time"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/date_time"
        android:background="@drawable/new_task_button"
        android:text="@string/set"
        android:textColor="@color/white" />
</RelativeLayout>
